...

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_footer"
            android:layout_below="@id/toolbar" />

        <RelativeLayout
            android:id="@+id/layout_footer"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true">

            <ImageView
                android:id="@+id/image_pageLeft"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/previous"
                android:paddingLeft="12dp"
...
                android:id="@+id/pager_indicator"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:id="@+id/image_pageRight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/next"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:scaleType="centerInside"
                android:src="@drawable/button_arrow_right_selector" />
        </RelativeLayout>
    </RelativeLayout>
...
