...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/actionSkip"
        android:onClick="onSkipClick"
        android:title="@string/skip"
        app:showAsAction="always" />
</menu>

